# exam-generator-desktop

./: .gitignore  DESIGN.md  PRODUCT.md  README.md
.github/workflows/: package-installers.yml
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
backend/: README.md  pyproject.toml
backend/exam_backend/: __init__.py  cli.py  generate_exams.py  generate_final_exams.py  local_server.py
backend/exam_backend/templates/: app.js  index_template.html  styles.css
docs/: SAFETY.md
scripts/: build-backend-sidecar.mjs  build-backend-sidecar.py  dev-backend.sh
tests/backend/: test_backend_safety.py
